# -*- python -*-

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "kinova_driver_common",
    srcs = ["kinova_driver_common.cc"],
    hdrs = ["kinova_driver_common.h"],
    deps = [
        "@gflags//:gflags",
        "@jaco_sdk//:usb_command_layer",
    ],
)

cc_library(
    name = "kinova_driver_common_ethernet",
    srcs = ["kinova_driver_common.cc"],
    hdrs = ["kinova_driver_common.h"],
    copts = ["-DUSE_ETHERNET"],
    deps = [
        "@gflags//:gflags",
        "@jaco_sdk//:ethernet_command_layer",
    ],
)

cc_binary(
    name = "kinova_driver",
    srcs = [
        "kinova_driver.cc",
    ],
    linkopts = ["-lrt"],
    deps = [
        ":kinova_driver_common",
        "//lcmtypes:lcmtypes_drake_jaco_driver_cc",
        "@drake//lcmtypes:jaco",
        "@gflags//:gflags",
        "@jaco_sdk//:usb_command_layer",
        "@lcm",
    ],
)

cc_binary(
    name = "kinova_driver_ethernet",
    srcs = [
        "kinova_driver.cc",
    ],
    copts = ["-DUSE_ETHERNET"],
    linkopts = ["-lrt"],
    deps = [
        ":kinova_driver_common_ethernet",
        "//lcmtypes:lcmtypes_drake_jaco_driver_cc",
        "@drake//lcmtypes:jaco",
        "@gflags//:gflags",
        "@jaco_sdk//:ethernet_command_layer",
        "@lcm",
    ],
)

cc_binary(
    name = "kinova_actuator_driver_ethernet",
    srcs = [
        "kinova_actuator_driver.cc",
    ],
    copts = ["-DUSE_ETHERNET"],
    linkopts = ["-lrt"],
    deps = [
        ":kinova_driver_common_ethernet",
        "//lcmtypes:lcmtypes_drake_jaco_driver_cc",
        "@drake//lcmtypes:jaco",
        "@drake//lcmtypes:panda",
        "@gflags//:gflags",
        "@jaco_sdk//:ethernet_command_layer",
        "@lcm",
    ],
)

cc_binary(
    name = "kinova_calibration",
    srcs = [
        "kinova_calibration.cc",
    ],
    deps = [
        ":kinova_driver_common",
        "@gflags//:gflags",
        "@jaco_sdk//:usb_command_layer",
    ],
)

cc_binary(
    name = "kinova_calibration_ethernet",
    srcs = [
        "kinova_calibration.cc",
    ],
    copts = ["-DUSE_ETHERNET"],
    deps = [
        ":kinova_driver_common_ethernet",
        "@gflags//:gflags",
        "@jaco_sdk//:usb_command_layer",
    ],
)
